config/samples/networking_v1alpha1_gatewayclass.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: GatewayClass
metadata:
  name: gatewayclass-sample
spec:
  controller: example.com/service-apis-controller
  allowedGatewayNamespaceSelector: 
    matchLabels:
      env: prod
  allowedRouteNamespaces: 
    namespaceSelector: 
      matchLabels:
        env: prod
    onlySameNamespace: false
