config/samples/networking_v1alpha1_gateway.yaml
apiVersion: networking.x.k8s.io/v1alpha1
kind: Gateway
metadata:
  name: gateway-sample
  namespace: gateway-sample
spec:
  # Add fields here
  foo: bar
