config/samples/networking_v1alpha1_httproute.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: http-route-sample
  labels:
    app: foo
spec:
  hosts:
  - hostnames:
    - "foo.com"
    rules:
    - match:
        path: /bar
      action:
        forwardTo:
          targetRef:
            name: my-service
            group: core
            resource: services
